--- a/service-details.html
+++ b/service-details.html
@@ -191,7 +191,7 @@
                             <h3>Enterprise AI Security Services</h3><br>
                             <p><b>Core Services:</b><br><br> • AI Security Assessment & Strategy<br> • Implementation & Architecture<br> • Training & Education<br><br>
 
-                                <b>Comprehensive Coverage:</b><br><br> • Security Assessment & Hardening<br> • Enterprise Architecture Design<br> • Compliance & Risk Management<br> • Continuous Monitoring & Support<br> • Incident Response & Recovery</p>
+                                <b>Coverage:</b><br><br> • Security Assessment<br> • Architecture Design<br> • Compliance Management<br> • Monitoring & Support<br> • Incident Response</p>
                         </div>
                         <img src="" alt="" class="img-fluid product-img" id="product-img">
 
@@ -365,34 +365,34 @@
                 if (productId === 'product-1') {
                     productContent.innerHTML = `
             <h3>AI Security Assessment & Strategy</h3>
-            <p>Comprehensive security evaluation and strategic planning for your AI systems. Our expert team conducts thorough assessments and develops robust security strategies.</p>
+            <p>Security evaluation and strategic planning for AI systems. Our team conducts assessments and develops security strategies.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Vulnerability Assessment & Hardening</li>
-              <li><i class="bi bi-check-circle"></i> Security Gap Analysis</li>
-              <li><i class="bi bi-check-circle"></i> Compliance & Risk Management</li>
-              <li><i class="bi bi-check-circle"></i> Executive Security Consulting</li>
+              <li><i class="bi bi-check-circle"></i> Vulnerability Assessment</li>
+              <li><i class="bi bi-check-circle"></i> Security Analysis</li>
+              <li><i class="bi bi-check-circle"></i> Compliance Management</li>
+              <li><i class="bi bi-check-circle"></i> Executive Consulting</li>
             </ul>`;
                     productImg.src = 'assets/img/blog/blog-1.jpg';
                 } else if (productId === 'product-2') {
                     productContent.innerHTML = `
             <h3>Implementation & Architecture</h3>
-            <p>Strategic design, implementation, and ongoing support of secure AI architectures tailored to your enterprise needs. We ensure your AI infrastructure is built and maintained with security as a fundamental component.</p>
+            <p>Design and implementation of secure AI architectures. We ensure your infrastructure is built and maintained securely.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Security-First Architecture Design</li>
-              <li><i class="bi bi-check-circle"></i> Security Controls Deployment</li>
+              <li><i class="bi bi-check-circle"></i> Security Architecture</li>
+              <li><i class="bi bi-check-circle"></i> Controls Deployment</li>
               <li><i class="bi bi-check-circle"></i> Integration Planning</li>
-              <li><i class="bi bi-check-circle"></i> Access Management & Encryption</li>
-              <li><i class="bi bi-check-circle"></i> Real-time Security Monitoring</li>
-              <li><i class="bi bi-check-circle"></i> Incident Response & Recovery</li>
+              <li><i class="bi bi-check-circle"></i> Access Management</li>
+              <li><i class="bi bi-check-circle"></i> Security Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> Incident Response</li>
               <li><i class="bi bi-check-circle"></i> Performance Analytics</li>
             </ul>`;
                     productImg.src = 'assets/img/blog/blog-3.jpg';
                 } else if (productId === 'product-3') {
                     productContent.innerHTML = `
             <h3>Training & Education</h3>
-            <p>Comprehensive training programs designed to build your team's AI security expertise. From basic concepts to advanced security practices.</p>
+            <p>Training programs to build your team's AI security expertise, from basics to advanced practices.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Custom Training Programs</li>
+              <li><i class="bi bi-check-circle"></i> Custom Training</li>
               <li><i class="bi bi-check-circle"></i> Hands-on Workshops</li>
               <li><i class="bi bi-check-circle"></i> Security Best Practices</li>
               <li><i class="bi bi-check-circle"></i> Team Certification</li>
