--- a/productsdetails.html
+++ b/productsdetails.html
@@ -190,9 +190,9 @@
                     <div class="col-lg-8 ps-lg-5 text-center" data-aos="fade-up" data-aos-delay="200">
                         <div id="product-content" class="service-box">
                             <h3>Enterprise AI Security Solutions</h3><br><br>
-                            <p><b>Core Products:</b><br><br> • Safety Shield Ultra™ - Enterprise Protection<br> • Model Protection Suite<br> • Enterprise Security<br> • Performance Optimization<br><br>
+                            <p><b>Core Products:</b><br><br> • Safety Shield Ultra™<br> • Model Protection Suite<br> • Enterprise Security<br> • Performance Optimization<br><br>
 
-                                <b>Key Benefits:</b><br><br> • Comprehensive AI Security<br> • Regulatory Compliance<br> • Performance Optimization<br> • Risk Reduction</p>
+                                <b>Benefits:</b><br><br> • AI Security<br> • Compliance<br> • Optimization<br> • Risk Reduction</p>
                         </div>
                         <img src="" alt="" class="img-fluid product-img" id="product-img">
 
@@ -346,20 +346,19 @@
                 if (productId === 'product-1') {
                     productContent.innerHTML = `
             <h3>Safety Shield Ultra™</h3>
-            <p>Enterprise-grade AI security platform protecting your conversational AI systems from modern threats.</p>
+            <p>AI security platform protecting conversational AI from threats.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Prompt Injection Protection</li>
-              <li><i class="bi bi-check-circle"></i> Real-time Threat Detection</li>
-              <li><i class="bi bi-check-circle"></i> Data Exposure Monitoring</li>
-              <li><i class="bi bi-check-circle"></i> Automated Security Controls</li>
-              <li><i class="bi bi-check-circle"></i> Compliance Monitoring</li>
-              <li><i class="bi bi-check-circle"></i> And more...</li>
+              <li><i class="bi bi-check-circle"></i> Prompt Protection</li>
+              <li><i class="bi bi-check-circle"></i> Threat Detection</li>
+              <li><i class="bi bi-check-circle"></i> Data Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> Security Controls</li>
+              <li><i class="bi bi-check-circle"></i> Compliance</li>
             </ul>`;
                     productImg.src = 'assets/img/safetyshield.jpg';
                 } else if (productId === 'product-2') {
                     productContent.innerHTML = `
             <h3>Model Protection Suite</h3>
-            <p>Comprehensive protection for your AI models, combining interpretability, anonymization, and algorithmic protection.</p>
+            <p>Protection for AI models with interpretability and security features.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Model Interpretability</li>
               <li><i class="bi bi-check-circle"></i> Data Anonymization</li>
@@ -370,9 +369,9 @@
                 } else if (productId === 'product-3') {
                     productContent.innerHTML = `
             <h3>Enterprise Security</h3>
-            <p>End-to-end security solution for enterprise AI deployments, focusing on compliance and risk management.</p>
+            <p>Security solution for enterprise AI deployments.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Compliance Automation</li>
+              <li><i class="bi bi-check-circle"></i> Compliance</li>
               <li><i class="bi bi-check-circle"></i> Risk Assessment</li>
               <li><i class="bi bi-check-circle"></i> Security Monitoring</li>
               <li><i class="bi bi-check-circle"></i> Incident Response</li>
@@ -381,7 +380,7 @@
                 } else if (productId === 'product-4') {
                     productContent.innerHTML = `
             <h3>Performance Optimization</h3>
-            <p>Optimize your AI systems for maximum efficiency while maintaining security standards.</p>
+            <p>Optimize AI systems for efficiency and security.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Model Compression</li>
               <li><i class="bi bi-check-circle"></i> Performance Benchmarking</li>
