finished product and services pages - also added "Industries at Risk" section in both pages

--- a/productsdetails.html
+++ b/productsdetails.html
@@ -201,6 +201,54 @@
             </div>
         </section>
         <!-- /Product Details Section -->
+
+        <!-- Industries Section -->
+        <section id="industries" class="industries section bg-light">
+            <div class="container">
+                <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
+                    <h2>Industries at Risk</h2>
+                    <p>Critical Statistics Across Key Sectors</p>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 gy-4">
+
+                    <!-- Industry 1 -->
+                    <div class="col" data-aos="fade-up" data-aos-delay="200">
+                        <div class="card h-100 tech-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Financial Services</h5>
+                                <p class="card-text">• 78% of financial firms face AI security breaches<br> • $2.5M average cost per breach<br> • 45% of AI systems vulnerable to attacks<br> • 60% compliance violations in AI systems</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Industry 1 -->
+
+                    <!-- Industry 2 -->
+                    <div class="col" data-aos="fade-up" data-aos-delay="300">
+                        <div class="card h-100 tech-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Healthcare</h5>
+                                <p class="card-text">• 85% of healthcare AI systems exposed<br> • $1.2M average breach cost<br> • 70% patient data at risk<br> • 50% HIPAA violations in AI</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Industry 2 -->
+
+                    <!-- Industry 3 -->
+                    <div class="col" data-aos="fade-up" data-aos-delay="400">
+                        <div class="card h-100 tech-card">
+                            <div class="card-body">
+                                <h5 class="card-title">E-commerce</h5>
+                                <p class="card-text">• 92% of e-commerce AI systems attacked<br> • $3.8M average fraud loss<br> • 65% customer data exposed<br> • 55% revenue loss from breaches</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Industry 3 -->
+
+                </div>
+            </div>
+        </section>
+        <!-- End Industries Section -->
+
     </main>
 
     <section id="call-to-action" class="call-to-action section">
