--- a/service-details.html
+++ b/service-details.html
@@ -205,8 +205,8 @@
         <section id="case-studies" class="case-studies section bg-light">
             <div class="container">
                 <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
-                    <h2>Industries</h2>
-                    <p>Enterprise AI Security Services Across Key Sectors</p>
+                    <h2>Industries at Risk</h2>
+                    <p>Critical Statistics Across Key Sectors</p>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 gy-4">
 
@@ -215,7 +215,7 @@
                         <div class="card h-100 tech-card">
                             <div class="card-body">
                                 <h5 class="card-title">Financial Services</h5>
-                                <p class="card-text">• AI Security Assessment & Hardening<br> • Prompt Injection Protection Services<br> • Model Security Architecture Design<br> • Compliance & Audit Support</p>
+                                <p class="card-text">• 78% of financial firms face AI security breaches<br> • $2.5M average cost per breach<br> • 45% of AI systems vulnerable to attacks<br> • 60% compliance violations in AI systems</p>
                             </div>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                         <div class="card h-100 tech-card">
                             <div class="card-body">
                                 <h5 class="card-title">Healthcare</h5>
-                                <p class="card-text">• AI Diagnostic System Security<br> • HIPAA-Compliant AI Architecture<br> • Medical AI Risk Assessment<br> • Healthcare AI Security Training</p>
+                                <p class="card-text">• 85% of healthcare AI systems exposed<br> • $1.2M average breach cost<br> • 70% patient data at risk<br> • 50% HIPAA violations in AI</p>
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                         <div class="card h-100 tech-card">
                             <div class="card-body">
                                 <h5 class="card-title">E-commerce</h5>
-                                <p class="card-text">• AI Fraud Detection Security<br> • E-commerce AI Architecture Review<br> • Customer Data Protection Services<br> • AI Security Implementation Support</p>
+                                <p class="card-text">• 92% of e-commerce AI systems attacked<br> • $3.8M average fraud loss<br> • 65% customer data exposed<br> • 55% revenue loss from breaches</p>
                             </div>
                         </div>
                     </div>
