--- a/safetyshield.html
+++ b/safetyshield.html
@@ -578,7 +578,7 @@
                   Ciudad Autónoma de Buenos Aires, CP1008<br>
                   Argentina<br>
                 </p>
-                <p><strong>Phone:</strong> <a href="https://wa.link/2ebre2" target="_blank">+54 (9) 11 76455965</a></p>
+                <p><strong>Phone:</strong> <a href="https://wa.link/2ebre2" target="_blank"><br>+54 (9) 11 76455965</a></p>
                 <p><strong>Email:</strong> <a href="mailto:contact@ultradeeptech.com">contact@ultradeeptech.com</a></p>
       
                 <!-- Redes Sociales -->
