--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
 
 
 
-        <section class="blog-videos-cta section py-5 position-relative overflow-hidden">
+        <section class="blog-videos-cta section py-5 position-relative overflow-hidden " id="youtube-videos">
             <div class="container">
                 <div class="row align-items-center gy-5">
 
