--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,26 @@
         gtag('config', 'G-LD1QMH1MRS');
     </script>
 
-
+<style>  
+  /* Language toggle button – minimal & subtle */
+  #lang-toggle {
+    background: none;
+    border: none;
+    color: var(--nav-color);
+    font-family: var(--nav-font);
+    font-size: 0.9rem;
+    margin-left: 35px;
+    padding: 0.25rem 0.5rem;
+    cursor: pointer;
+    transition: color 0.3s ease;
+  }
+  
+  #lang-toggle:hover,
+  #lang-toggle:focus {
+    color: var(--accent-color);
+    outline: none;
+  }
+      </style>
 
 
 </head>
