--- a/index.html
+++ b/index.html
@@ -667,7 +667,6 @@
             transform: scale(1.2);
         }
 
-        
 /* Language toggle button – minimal & subtle */
 #lang-toggle {
   background: none;
@@ -901,7 +900,7 @@
     <main class="main">
         <!-- Hero Section -->
 <section id="hero" class="hero section">
-  <img src="/assets/img/ChatGPT-Image-1-abr-2025_-02_35_59 (1).webp"
+  <img src="/assets/img/ChatGPT-Image-1-abr-2025_-02_35_59.webp"
        alt="Fondo de Ultra Deep Tech"
        loading="eager">
 
@@ -954,17 +953,17 @@
 
         <section class="ai-banner-section position-relative overflow-hidden">
             <!-- Imagen de fondo -->
-            <img src="/assets/img/Demostracion-_7_ (1).webp"
+            <img src="/assets/img/Demostracion-_7_(1).webp"
                  alt="Background"
                  class="ai-banner-bg"
-                 loading="lazy">
+                 loading="lazy"id="why-us">
           
             <div class="container position-relative z-2">
               <div class="row align-items-center">
                 <!-- Texto -->
                 <div class="col-lg-6 text-white1">
                   <h2 class="fw-bold text-white1"
-                      data-i18n="hero_subtitle">
+                      data-i18n="hero_subtitle" >
                     Protect Your AI<br>From Modern Threats
                   </h2>
                   <h3 class="fw-bold text-white1"
@@ -1091,7 +1090,7 @@
 
 <!-- CTA AI Upgrade Section -->
 <section class="cta-ai-upgrade-section position-relative overflow-hidden py-5">
-    <img src="./assets/img/Demostracion-_7_ (1).webp"
+    <img src="./assets/img/Demostracion-_7_(1).webp"
          alt="AI Capabilities Background"
          class="cta-ai-bg"
          loading="lazy">
