--- a/safetyshield.html
+++ b/safetyshield.html
@@ -32,7 +32,26 @@
     <link href="assets/css/safetypage.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
 
-
+    <style>  
+      /* Language toggle button – minimal & subtle */
+      #lang-toggle {
+        background: none;
+        border: none;
+        color: var(--nav-color);
+        font-family: var(--nav-font);
+        font-size: 0.9rem;
+        margin-left: 35px;
+        padding: 0.25rem 0.5rem;
+        cursor: pointer;
+        transition: color 0.3s ease;
+      }
+      
+      #lang-toggle:hover,
+      #lang-toggle:focus {
+        color: var(--accent-color);
+        outline: none;
+      }
+          </style>
 
 </head>
 
