--- a/cursos.html
+++ b/cursos.html
@@ -234,7 +234,7 @@
                 <p class="text-white">Capacite a su equipo con cursos diseñados para garantizar cumplimiento, privacidad y resiliencia frente a amenazas de IA.</p>
                 <div class="d-flex">
                   <a href="#about" class="btn-get-started">Get Started</a>
-                  <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center text-white "><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+
                 </div>
               </div>
             </div>
@@ -242,47 +242,73 @@
     
         </section><!-- /Hero Section -->
     
-        <section id="about" class="about section">
-            <div class="container">
-              <div class="row gy-4">
-                <!-- Imagen ilustrativa -->
-                <div class="col-lg-6 position-relative align-self-start order-lg-last order-first " data-aos="fade-up" data-aos-delay="200">
-                  <img src="assets/img/avipresent.gif" class="img-fluid" alt="Equipo recibiendo capacitación">
-                  <a href="https://www.youtube.com/watch?v=RZz8YUaKqf8" class="glightbox pulsating-play-btn"></a>
-                </div>
-                <!-- Contenido persuasivo -->
-                <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
-                  <h3>Capacitación Estratégica en Seguridad de IA</h3>
-                  <p>En Ultra Deep Tech entendemos que la confianza y el cumplimiento son esenciales para gobiernos, bancos y grandes corporaciones. Nuestros cursos están diseñados para dotar a su equipo de las habilidades y conocimientos necesarios para enfrentar los retos de seguridad en inteligencia artificial, garantizando:</p>
-                  <ul>
-                    <li>
-                      <i class="bi bi-shield-fill-check"></i>
-                      <div>
-                        <h5>Protección contra Amenazas Avanzadas</h5>
-                        <p>Implementación de defensas efectivas contra ataques de prompt injection, envenenamiento de datos y otros vectores críticos.</p>
-                      </div>
-                    </li>
-                    <li>
-                      <i class="bi bi-award"></i>
-                      <div>
-                        <h5>Cumplimiento Normativo Rigoroso</h5>
-                        <p>Adaptación a los estándares GDPR, PCI-DSS y NIST, asegurando la conformidad con regulaciones nacionales e internacionales.</p>
-                      </div>
-                    </li>
-                    <li>
-                      <i class="bi bi-people-fill"></i>
-                      <div>
-                        <h5>Formación Práctica y Personalizada</h5>
-                        <p>Casos de estudio reales y ejercicios guiados que reflejan los desafíos específicos de su organización.</p>
-                      </div>
-                    </li>
-                  </ul>
+<!-- ======= About / Capacitación Section Adaptada ======= -->
+<section id="about" class="about section light-background">
+  <div class="container">
+    <div class="row gy-4">
 
-                </div>
-              </div>
-              <p>Invierta en la preparación de su equipo y evite costosas brechas de seguridad. <a href="#catalogo" class="fw-bold">Descubra nuestro catálogo de cursos</a> y acceda a un roadmap de aprendizaje que garantizará la resiliencia de sus sistemas de IA.</p>
+      <!-- Imagen Ilustrativa -->
+      <div class="col-lg-6 position-relative align-self-start order-lg-last order-first"
+           data-aos="fade-up" data-aos-delay="200">
+        <img src="assets/img/avipresent.gif"
+             class="img-fluid"
+             alt="Equipo recibiendo capacitación">
+        <a href="https://www.youtube.com/watch?v=RZz8YUaKqf8"
+           class="glightbox pulsating-play-btn"></a>
+      </div>
+
+      <!-- Contenido Persuasivo -->
+      <div class="col-lg-6 content order-last order-lg-first"
+           data-aos="fade-up" data-aos-delay="100">
+        <h3>Formación Certificada en Seguridad de IA</h3>
+        <p>
+          En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas
+          para ofrecer una capacitación de élite en seguridad de inteligencia artificial:
+        </p>
+        <ul class="list-unstyled">
+          <li class="d-flex mb-4">
+            <i class="bi bi-award-fill fs-2 text-primary me-3"></i>
+            <div>
+              <h5>Certificaciones AISP, CAISE y AIGP</h5>
+              <p>Diplomas propios que avalan competencias avanzadas en detección de amenazas, gobierno y
+                protección de IA.</p>
             </div>
-          </section><!-- End About Section -->
+          </li>
+          <li class="d-flex mb-4">
+            <i class="bi bi-link-45deg fs-2 text-primary me-3"></i>
+            <div>
+              <h5>Alianzas con ISC², EC-Council, CESSI y Fintech</h5>
+              <p>Formación oficial respaldada por líderes en ciberseguridad y tecnología financiera.</p>
+            </div>
+          </li>
+          <li class="d-flex mb-4">
+            <i class="bi bi-shield-check fs-2 text-primary me-3"></i>
+            <div>
+              <h5>Alineamiento con ISO, NIST, UNESCO y OCDE</h5>
+              <p>Programas diseñados siguiendo estándares internacionales de seguridad y ética en IA.</p>
+            </div>
+          </li>
+          <li class="d-flex">
+            <i class="bi bi-gear-fill fs-2 text-primary me-3"></i>
+            <div>
+              <h5>Metodología Práctica y Personalizada</h5>
+              <p>Ejercicios y casos de estudio adaptados a los retos de tu organización para garantizar resultados reales.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+
+    <p class="mt-5 text-center">
+      Invierte en la seguridad de tu IA y obtén certificaciones que marcan la diferencia.
+      <a href="#certificaciones-obtendras" class="fw-bold">Descubre lo que puedes lograr</a>
+      y <a href="#contacto" class="fw-bold">contáctanos</a> para diseñar el plan perfecto para tu equipo.
+    </p>
+  </div>
+</section>
+<!-- End About Section -->
+
 
 
           <style>
