--- a/cursos.html
+++ b/cursos.html
@@ -884,6 +884,15 @@
 }
 </style>
 
+<!-- ======= Disclaimer Legal (Footer) ======= -->
+<footer class="footer-disclaimer text-center py-4">
+  <div class="container">
+    <small>
+      Los logotipos mostrados en este sitio reflejan alineación con normas internacionales, solicitudes de alianzas en proceso, o certificaciones propias emitidas legalmente por nuestra institución. No reclamamos acreditación oficial salvo que se indique expresamente.
+    </small>
+  </div>
+</footer>
+<!-- End Disclaimer Legal -->
 
 
     
