--- a/cursos.html
+++ b/cursos.html
@@ -233,7 +233,7 @@
                 <h1 class="text-white">Formación en Seguridad de IA para Gobiernos y Empresas</h1>
                 <p class="text-white">Capacite a su equipo con cursos diseñados para garantizar cumplimiento, privacidad y resiliencia frente a amenazas de IA.</p>
                 <div class="d-flex">
-                  <a href="#about" class="btn-get-started">Get Started</a>
+                  <a href="#about" class="btn-get-started">Ver Mas</a>
 
                 </div>
               </div>
@@ -303,7 +303,7 @@
     <p class="mt-5 text-center">
       Invierte en la seguridad de tu IA y obtén certificaciones que marcan la diferencia.
       <a href="#certificaciones-obtendras" class="fw-bold">Descubre lo que puedes lograr</a>
-      y <a href="#contacto" class="fw-bold">contáctanos</a> para diseñar el plan perfecto para tu equipo.
+      y <a href="#contact" class="fw-bold">contáctanos</a> para diseñar el plan perfecto para tu equipo.
     </p>
   </div>
 </section>
