--- a/productsdetails.html
+++ b/productsdetails.html
@@ -65,7 +65,7 @@
 <body class="product-details-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
   
       <!-- Logo -->
       <a href="index.html" class="logo d-flex align-items-center">
@@ -196,6 +196,13 @@
             </ul>
           </li>
   
+          <!-- Contact -->
+          <li class="dropdown">
+            <a href="cursos.html" class="nav-link">
+              <i class="bi bi-book"></i>
+              <span data-i18n="cursos">Courses</span>
+            </a>
+              <li>
           <!-- Contact -->
           <li class="dropdown">
             <a href="contact.html" class="nav-link">
