--- a/cursos.html
+++ b/cursos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Cursos de Seguridad en IA – Gobierno, Bancos y Empresas | Ultra Deep Tech</title>
+    <title data-i18n="title-courses">Cursos de Seguridad en IA – Gobierno, Bancos y Empresas | Ultra Deep Tech</title>
 
 
     <meta name="description" content="Capacite a su equipo en seguridad de IA con nuestros cursos especializados para organismos gubernamentales, entidades bancarias y grandes corporaciones. Garantía de cumplimiento normativo y protección frente a amenazas avanzadas.">
