--- a/cursos.html
+++ b/cursos.html
@@ -692,7 +692,7 @@
 
       <!-- Botón CTA como "Tarjeta 4" -->
       <div class="col-md-6 col-lg-3 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="400">
-        <a href="#contacto" class="why-cta">
+        <a href="https://wa.link/2ebre2" target="_blank"  class="why-cta">
           <div class="icon-wrapper">
             <i class="bi bi-send-fill fs-3"></i>
           </div>
@@ -921,63 +921,6 @@
     <script src="assets/js/cursos.js"></script>
 
 
-    <div id="videoModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times; </span>
-            <video id="videoPlayer" width="100%" controls>
-        <source src="assets/video/demostracion español.mp4" type="video/mp4">
-        Tu navegador no soporta el tag de video.
-      </video>
-        </div>
-    </div>
-
-
-    <!-- El botón "Request a demo" en tu HTML existente debe tener este ID -->
-
-
-
-
-    <!-- Agrega esto justo antes del cierre del body tag -->
-    <div id="demoModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Request a Demo</h2>
-            <form id="demoForm">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="firstName">First Name:</label>
-                        <input type="text" id="firstName" name="firstName" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="lastName">Last Name:</label>
-                        <input type="text" id="lastName" name="lastName" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="position">Position:</label>
-                        <input type="text" id="position" name="position" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="companyName">Company Name:</label>
-                        <input type="text" id="companyName" name="companyName" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone:</label>
-                        <input type="tel" id="phone" name="phone" required>
-                    </div>
-                </div>
-
-                <button type="submit">Submit Request</button>
-            </form>
-        </div>
-    </div>
 
     <!-- Añade esto justo antes del cierre de tu <body> -->
 <a href="https://wa.link/2ebre2" target="_blank" class="whatsapp-float">
