--- a/blog.html
+++ b/blog.html
@@ -126,19 +126,19 @@
                 </a>
               </li>
               <li>
-                <a href="productsdetails.html?product=product-1" class="nav-link">
+                <a href="productsdetails.html?product=product-2" class="nav-link">
                   <i class="bi bi-cpu-fill"></i>
                   <span data-i18n="ai_model_suite">AI Model Protection Suite</span>
                 </a>
               </li>
               <li>
-                <a href="productsdetails.html?product=product-2" class="nav-link">
+                <a href="productsdetails.html?product=product-3" class="nav-link">
                   <i class="bi bi-shield-check"></i>
                   <span data-i18n="enterprise_security">Enterprise AI Security</span>
                 </a>
               </li>
               <li>
-                <a href="productsdetails.html?product=product-3" class="nav-link">
+                <a href="productsdetails.html?product=product-4" class="nav-link">
                   <i class="bi bi-graph-up-arrow"></i>
                   <span data-i18n="performance_optimization">AI Performance Optimization</span>
                 </a>
@@ -166,7 +166,7 @@
                 </a>
               </li>
               <li>
-                <a href="service-details.html?product=product-3" class="nav-link">
+                <a href="cursos.html" class="nav-link">
                   <i class="bi bi-easel-fill"></i>
                   <span data-i18n="training_education">Training &amp; Education</span>
                 </a>
@@ -196,13 +196,7 @@
             </ul>
           </li>
   
-          <!-- Contact -->
-          <li class="dropdown">
-            <a href="cursos.html" class="nav-link">
-              <i class="bi bi-book"></i>
-              <span data-i18n="cursos">Courses</span>
-            </a>
-              <li>
+
           <!-- Contact -->
           <li class="dropdown">
             <a href="contact.html" class="nav-link">
@@ -383,9 +377,9 @@
               <h4 data-i18n="footer_products">Products</h4>
               <ul>
                 <li><a href="safetyshield.html" data-i18n="safety_shield">Safety Shield Ultra™</a></li>
-                <li><a href="productsdetails.html?product=product-1" data-i18n="ai_model_suite">AI Model Protection Suite</a></li>
-                <li><a href="productsdetails.html?product=product-2" data-i18n="enterprise_security">Enterprise AI Security</a></li>
-                <li><a href="productsdetails.html?product=product-3" data-i18n="performance_optimization">AI Performance Optimization</a></li>
+                <li><a href="productsdetails.html?product=product-2" data-i18n="ai_model_suite">AI Model Protection Suite</a></li>
+                <li><a href="productsdetails.html?product=product-3" data-i18n="enterprise_security">Enterprise AI Security</a></li>
+                <li><a href="productsdetails.html?product=product-4" data-i18n="performance_optimization">AI Performance Optimization</a></li>
               </ul>
             </div>
     
@@ -393,9 +387,9 @@
             <div class="col-lg-2 col-6 footer-links text-center">
               <h4 data-i18n="footer_services">Services</h4>
               <ul>
-                <li><a href="service-details.html?service=1" data-i18n="ai_assessment">AI Security Assessment &amp; Strategy</a></li>
-                <li><a href="service-details.html?service=2" data-i18n="implementation">Implementation &amp; Architecture</a></li>
-                <li><a href="service-details.html?service=3" data-i18n="training_education">Training &amp; Education</a></li>
+                <li><a href="/service-details.html?product=product-1" data-i18n="ai_assessment">AI Security Assessment &amp; Strategy</a></li>
+                <li><a href="/service-details.html?product=product-2" data-i18n="implementation">Implementation &amp; Architecture</a></li>
+                <li><a href="cursos.html" data-i18n="training_education">Training &amp; Education</a></li>
               </ul>
             </div>
     
