--- a/index.html
+++ b/index.html
@@ -805,6 +805,12 @@
             </a>
             <ul>
               <li>
+                <a href="cursos.html" class="nav-link">
+                  <i class="bi bi-easel-fill"></i>
+                  <span data-i18n="training_education">Training &amp; Education</span>
+                </a>
+              </li>
+              <li>
                 <a href="service-details.html?product=product-1" class="nav-link">
                   <i class="bi bi-gear-fill"></i>
                   <span data-i18n="ai_assessment">AI Security Assessment &amp; Strategy</span>
@@ -816,12 +822,7 @@
                   <span data-i18n="implementation">Implementation &amp; Architecture</span>
                 </a>
               </li>
-              <li>
-                <a href="cursos.html" class="nav-link">
-                  <i class="bi bi-easel-fill"></i>
-                  <span data-i18n="training_education">Training &amp; Education</span>
-                </a>
-              </li>
+
             </ul>
           </li>
   
@@ -1201,6 +1202,33 @@
     </div>
   </section>
   
+  <section class="cta-ai-upgrade-section2 position-relative overflow-hidden py-5">
+    <img src="./assets/img/blog/blog-4.jpg"
+         alt="Certifications Background"
+         class="cta-ai-bg2"
+         loading="lazy">
+  
+    <div class="container position-relative z-2">
+      <div class="row justify-content-center">
+        <div class="col-lg-10 text-center">
+          <h3 class="cta-ai-title fw-bold display-6 mb-3"
+              data-i18n="certifications_cta_title">
+            Certifications
+          </h3>
+          <p class="cta-ai-subtitle fs-5 mb-4"
+             data-i18n="certifications_cta_desc">
+            Validate your skills with our industry-recognized certificates.
+          </p>
+          <a href="cursos.html"
+             class="cta-ai-btn d-inline-block"
+             data-i18n="certifications_cta_button">
+            Certificate Now!
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
 
 
   <section
@@ -1319,9 +1347,9 @@
         <div class="col-lg-2 col-6 footer-links text-center">
           <h4 data-i18n="footer_services">Services</h4>
           <ul>
+            <li><a href="cursos.html" data-i18n="training_education">Training &amp; Education</a></li>
             <li><a href="/service-details.html?product=product-1" data-i18n="ai_assessment">AI Security Assessment &amp; Strategy</a></li>
             <li><a href="/service-details.html?product=product-2" data-i18n="implementation">Implementation &amp; Architecture</a></li>
-            <li><a href="cursos.html" data-i18n="training_education">Training &amp; Education</a></li>
           </ul>
         </div>
 
