--- a/cursos.html
+++ b/cursos.html
@@ -250,7 +250,7 @@
           </div>
           <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
             <h3 data-i18n="about_heading">Formación Certificada en Seguridad de IA</h3>
-            <p data-i18n="about_description">En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas para ofrecer una capacitación de élite en seguridad de inteligencia artificial:</p>
+            <p data-i18n="about_formation">En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas para ofrecer una capacitación de élite en seguridad de inteligencia artificial:</p>
             <ul class="list-unstyled">
               <li class="d-flex mb-4">
                 <i class="bi bi-award-fill fs-2 text-primary me-3"></i>
