--- a/cursos.html
+++ b/cursos.html
@@ -32,7 +32,9 @@
     <!-- Main CSS File -->
     <link href="assets/css/cursos.css" rel="stylesheet">
 
-
+    <link rel="preload" href="assets/js/lang.js" as="script">
+    <script src="assets/js/lang.js" defer></script>
+    
 
 </head>
 
@@ -252,7 +254,7 @@
           </div>
           <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
             <h3 data-i18n="about_heading">Formación Certificada en Seguridad de IA</h3>
-            <p data-i18n="about_description">En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas para ofrecer una capacitación de élite en seguridad de inteligencia artificial:</p>
+            <p data-i18n="about_formation">En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas para ofrecer una capacitación de élite en seguridad de inteligencia artificial:</p>
             <ul class="list-unstyled">
               <li class="d-flex mb-4">
                 <i class="bi bi-award-fill fs-2 text-primary me-3"></i>
@@ -910,7 +912,6 @@
     <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/js/lang.js"></script>
 
     <!-- Main JS File -->
     <script src="assets/js/cursos.js"></script>
