--- a/cursos.html
+++ b/cursos.html
@@ -32,8 +32,10 @@
     <!-- Main CSS File -->
     <link href="assets/css/cursos.css" rel="stylesheet">
 
-    <link rel="preload" href="assets/js/lang.js" as="script">
-    <script src="assets/js/lang.js" defer></script>
+    <script src="assets/js/lang.js" ></script>
+
+        <!-- Main JS File -->
+        <script src="assets/js/cursos.js"></script>
     
 
 </head>
@@ -229,9 +231,7 @@
   <section id="hero" class="hero section dark-background">
     <div class="container">
       <div class="row gy-4">
-        <div class="col-lg-5 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
-          <img src="assets/img/aprendiendo.png" class="img-fluid animated" alt="" />
-        </div>
+
         <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-in">
           <h1 data-i18n="hero_title1" class="text-white">Formación en Seguridad de IA para Gobiernos y Empresas</h1>
           <p data-i18n="hero_subtitle1" class="text-white">Capacite a su equipo con cursos diseñados para garantizar cumplimiento, privacidad y resiliencia frente a amenazas de IA.</p>
@@ -897,11 +897,7 @@
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-    <!-- Preloader -->
-    <div id="preloader">
-        <img src="assets/img/logo_udt_03-400h.png" alt="Ultra Deep Tech Logo">
-        <!-- Asegúrate de usar la ruta correcta del logo -->
-    </div>
+
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -913,8 +909,7 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-    <!-- Main JS File -->
-    <script src="assets/js/cursos.js"></script>
+
 
 
 
