--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
       <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     </noscript>
 
-    <link rel="preload" href="assets/js/lang.js" as="script">
-<script src="assets/js/lang.js" defer></script>
-
-
     <!-- Critical CSS inline -->
     <style>
         /* Global Variables and Root Styles */
@@ -1427,6 +1423,7 @@
     <script src="assets/js/youtube-lite.js" defer></script>
     <script src="assets/js/script.js" defer></script>
     <script src="assets/js/cookies.js" defer></script>
+    <script src="assets/js/lang.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
