--- a/cursos.html
+++ b/cursos.html
@@ -32,11 +32,7 @@
     <!-- Main CSS File -->
     <link href="assets/css/cursos.css" rel="stylesheet">
 
-    <script src="assets/js/lang.js" ></script>
 
-        <!-- Main JS File -->
-        <script src="assets/js/cursos.js"></script>
-    
 
 </head>
 
@@ -231,7 +227,9 @@
   <section id="hero" class="hero section dark-background">
     <div class="container">
       <div class="row gy-4">
-
+        <div class="col-lg-5 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
+          <img src="assets/img/aprendiendo.png" class="img-fluid animated" alt="" />
+        </div>
         <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-in">
           <h1 data-i18n="hero_title1" class="text-white">Formación en Seguridad de IA para Gobiernos y Empresas</h1>
           <p data-i18n="hero_subtitle1" class="text-white">Capacite a su equipo con cursos diseñados para garantizar cumplimiento, privacidad y resiliencia frente a amenazas de IA.</p>
@@ -254,7 +252,7 @@
           </div>
           <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
             <h3 data-i18n="about_heading">Formación Certificada en Seguridad de IA</h3>
-            <p data-i18n="about_formation">En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas para ofrecer una capacitación de élite en seguridad de inteligencia artificial:</p>
+            <p data-i18n="about_description">En Ultra Deep Tech combinamos experiencia, certificaciones profesionales y alianzas estratégicas para ofrecer una capacitación de élite en seguridad de inteligencia artificial:</p>
             <ul class="list-unstyled">
               <li class="d-flex mb-4">
                 <i class="bi bi-award-fill fs-2 text-primary me-3"></i>
@@ -897,7 +895,11 @@
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-
+    <!-- Preloader -->
+    <div id="preloader">
+        <img src="assets/img/logo_udt_03-400h.png" alt="Ultra Deep Tech Logo">
+        <!-- Asegúrate de usar la ruta correcta del logo -->
+    </div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -908,8 +910,10 @@
     <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/js/lang.js"></script>
 
-
+    <!-- Main JS File -->
+    <script src="assets/js/cursos.js"></script>
 
 
 
