--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@
     <script src="assets/js/youtube-lite.js" defer></script>
     <script src="assets/js/script.js" defer></script>
     <script src="assets/js/cookies.js" defer></script>
-    <script src="assets/js/lang.js"></script>
+    <script src="assets/js/lang.js" defer></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
