--- a/cursos.html
+++ b/cursos.html
@@ -487,7 +487,7 @@
         </section>
 
         <!-- CTA Section -->
-        <section id="cta-bg" class="section text-center" data-aos="fade-up">
+        <section id="cta-bg1" class="section text-center" data-aos="fade-up">
           <div class="container cta-content">
               <h2 data-i18n="cta_title1">Impulsa la seguridad de tu organización</h2>
               <p data-i18n="cta_desc1">
