--- a/cursos.html
+++ b/cursos.html
@@ -244,7 +244,7 @@
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-6 position-relative align-self-start order-lg-last order-first" data-aos="fade-up" data-aos-delay="200">
-                        <img src="assets/img/young-man-4053324_1920.jpg" class="img-fluid" alt="Equipo recibiendo capacitación" />
+                        <img src="assets/img/mujeraprendiendo.webp" class="img-fluid rounded-4" alt="Equipo recibiendo capacitación" />
                         <a href="https://www.youtube.com/watch?v=RZz8YUaKqf8" class="glightbox pulsating-play-btn"></a>
                     </div>
                     <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
